Fix track list button text align.

--- a/client/src/pages/activeRelease/trackList/trackList.module.css
+++ b/client/src/pages/activeRelease/trackList/trackList.module.css
@@ -1,5 +1,6 @@
 .track {
   font-weight: 400;
+  text-align: left;
   text-transform: initial;
 }
 
